# django-boilerplate

./: .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  conftest.py  db.sqlite3  docker-compose.yml  main.py  playwright.config.py  pyproject.toml  pytest-e2e.ini  pytest.ini
accounts/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/tests/: factories.py  test_authentication.py  test_views.py
api/: urls.py
core/: settings.py  urls.py
core/settings/: __init__.py  base.py  development.py  production.py
docs/: 01 - original instructions.md  02. add register template.md  API.md  README.md  REGISTRATION_FLOW.md  SETUP.md
templates/: base.html
templates/registration/: login.html  register.html
tests/e2e/: README.md  conftest.py  test_api_integration.py  test_authenticated_flows.py  test_login.py  test_registration.py
